<resources>
    <string name="app_name">Book Store</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="sign_up">sign Up</string>
    <string name="sign_in">sign In</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="mobile">Mobile</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="slider_image">slider_Image</string>
    <string name="book_store">Book Store</string>
    <string name="featured">Featured</string>
    <string name="see_all">See all</string>
    <string name="books_image">Books Image</string>
    <string name="data_structures_and_algorithms">Data Structures and Algorithms</string>
    <string name="_14_00">14.00 $</string>
    <string name="free">Free</string>
    <string name="john_doe">John Doe</string>
    <string name="open">Open</string>
    <string name="image">image</string>
    <string name="book_information">Book Information</string>
    <string name="author_information">Author Information</string>
    <string name="place_order">Place Order</string>
    <string name="book_details">Book Details</string>
    <string name="books">Books</string>
</resources>
