<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_Guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_Guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <Button
        android:id="@+id/signUp_BT"
        style="@style/ButtonClicked"
        android:layout_width="0dp"
        android:background="@color/colorHide"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sign_up"
        android:textColor="@color/colorBlack"
        app:layout_constraintStart_toStartOf="@+id/start_Guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signIn_BT"
        style="@style/ButtonDisable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorHide"
        android:layout_marginTop="16dp"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="@+id/end_Guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="signUp_BT,signIn_BT" />


    <TextView
        android:id="@+id/userName_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/name"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/end_Guideline"
        app:layout_constraintStart_toStartOf="@id/start_Guideline"
        app:layout_constraintTop_toTopOf="@id/barrier" />

    <EditText
        android:id="@+id/userName_ET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/back_edit_text_border"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorGray"
        app:layout_constraintEnd_toStartOf="@+id/end_Guideline"
        app:layout_constraintStart_toStartOf="@+id/start_Guideline"
        app:layout_constraintTop_toBottomOf="@+id/userName_txt" />

    <TextView
        android:id="@+id/mobile_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/mobile"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/end_Guideline"
        app:layout_constraintStart_toStartOf="@id/start_Guideline"
        app:layout_constraintTop_toBottomOf="@id/userName_ET" />

    <EditText
        android:id="@+id/mobile_ET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/back_edit_text_border"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:textColorHint="@color/colorGray"
        app:layout_constraintEnd_toStartOf="@+id/end_Guideline"
        app:layout_constraintStart_toStartOf="@+id/start_Guideline"
        app:layout_constraintTop_toBottomOf="@+id/mobile_txt" />

    <TextView
        android:id="@+id/email_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/email"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/end_Guideline"
        app:layout_constraintStart_toStartOf="@id/start_Guideline"
        app:layout_constraintTop_toBottomOf="@id/mobile_ET" />

    <EditText
        android:id="@+id/email_ET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/back_edit_text_border"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/colorGray"
        app:layout_constraintEnd_toStartOf="@+id/end_Guideline"
        app:layout_constraintStart_toStartOf="@+id/start_Guideline"
        app:layout_constraintTop_toBottomOf="@+id/email_txt" />

    <TextView
        android:id="@+id/address_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/address"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/end_Guideline"
        app:layout_constraintStart_toStartOf="@id/start_Guideline"
        app:layout_constraintTop_toBottomOf="@id/email_ET" />

    <EditText
        android:id="@+id/address_ET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/back_edit_text_border"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/address"
        android:textColorHint="@color/colorGray"
        app:layout_constraintEnd_toStartOf="@+id/end_Guideline"
        app:layout_constraintStart_toStartOf="@+id/start_Guideline"
        app:layout_constraintTop_toBottomOf="@+id/address_txt" />

    <TextView
        android:id="@+id/password_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/password"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/end_Guideline"
        app:layout_constraintStart_toStartOf="@id/start_Guideline"
        app:layout_constraintTop_toBottomOf="@id/address_ET" />

    <EditText
        android:id="@+id/password_ET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/back_edit_text_border"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/colorGray"
        app:layout_constraintEnd_toStartOf="@+id/end_Guideline"
        app:layout_constraintStart_toStartOf="@+id/start_Guideline"
        app:layout_constraintTop_toBottomOf="@+id/password_txt" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/back_primary_button"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/end_Guideline"
        app:layout_constraintStart_toStartOf="@+id/start_Guideline" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="userName_txt,userName_ET,mobile_txt,mobile_ET,address_txt,address_ET"/>


</androidx.constraintlayout.widget.ConstraintLayout>