<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".view.booksDetails.booksDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_Guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_Guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <ImageView
        android:id="@+id/back_arrow_book_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_arrow_back_black_24dp"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/book_details_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/book_details"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/back_arrow_book_details"
        app:layout_constraintStart_toEndOf="@+id/back_arrow_book_details"
        app:layout_constraintTop_toTopOf="parent" />
        <androidx.cardview.widget.CardView
            android:id="@+id/book_container_card"
            android:layout_width="170dp"
            android:layout_height="200dp"
            android:layout_marginTop="32dp"
            app:cardElevation="2dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintTop_toBottomOf="@id/book_details_tv"
            app:layout_constraintStart_toStartOf="@id/start_Guideline"
            app:layout_constraintEnd_toEndOf="@id/end_Guideline"
               >
            <ImageView
                android:id="@+id/book_imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/img_placeholder"
                android:scaleType="centerCrop"
                android:contentDescription="@string/image" />


            </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/bookName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:gravity="center"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/data_structures_and_algorithms"
            android:textColor="@color/colorBlack"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="22sp"
            app:layout_constraintEnd_toStartOf="@+id/end_Guideline"
            app:layout_constraintStart_toStartOf="@+id/start_Guideline"
            app:layout_constraintTop_toBottomOf="@+id/book_container_card" />

        <TextView
            android:id="@+id/book_authorName_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:layout_marginEnd="16dp"
            android:gravity="end"
            android:textColor="@color/colorGray"
            android:text="@string/john_doe"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toStartOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/start_Guideline"
            app:layout_constraintTop_toTopOf="@id/view"
            />

        <View
            android:id="@+id/view"
            android:background="@color/colorGray"
            android:layout_width="1dp"
            android:layout_height="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/end_Guideline"
            app:layout_constraintStart_toStartOf="@+id/start_Guideline"
            app:layout_constraintTop_toBottomOf="@id/bookName" />

        <TextView
            android:id="@+id/book_price_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="start"
            android:text="@string/_14_00"
            android:textColor="@color/colorGray"
            android:textSize="12sp"
            app:layout_constraintTop_toTopOf="@id/view"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="@+id/end_Guideline"
            app:layout_constraintStart_toEndOf="@+id/view" />

        <RatingBar
            android:id="@+id/book_ratingBar"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rating="3"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/end_Guideline"
            app:layout_constraintStart_toStartOf="@+id/start_Guideline"
            app:layout_constraintTop_toBottomOf="@id/view"/>

        <View
            android:id="@+id/view_line_1"
            android:layout_width="3dp"
            android:layout_height="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="@id/start_Guideline"
            app:layout_constraintTop_toBottomOf="@id/book_ratingBar" />

        <TextView
            android:id="@+id/book_infoTitle_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/book_information"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/view_line_1"
            app:layout_constraintEnd_toEndOf="@id/end_Guideline"
            app:layout_constraintStart_toEndOf="@id/view_line_1"
            app:layout_constraintTop_toTopOf="@id/view_line_1" />

        <TextView
            android:id="@+id/book_info_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/end_Guideline"
            app:layout_constraintStart_toStartOf="@id/start_Guideline"
            app:layout_constraintTop_toBottomOf="@id/book_infoTitle_textView" />

        <View
            android:id="@+id/view_line_2"
            android:layout_width="3dp"
            android:layout_height="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="@id/start_Guideline"
            app:layout_constraintTop_toBottomOf="@id/book_info_textView" />

        <TextView
            android:id="@+id/book_author_infoTitle_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/author_information"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/view_line_2"
            app:layout_constraintEnd_toEndOf="@id/end_Guideline"
            app:layout_constraintStart_toEndOf="@id/view_line_2"
            app:layout_constraintTop_toTopOf="@id/view_line_2" />

        <TextView
            android:id="@+id/book_author_info_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/end_Guideline"
            app:layout_constraintStart_toStartOf="@id/start_Guideline"
            app:layout_constraintTop_toBottomOf="@id/book_author_infoTitle_textView" />

        <Button
            android:id="@+id/book_place_order_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/back_primary_button"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/place_order"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/end_Guideline"
            app:layout_constraintStart_toStartOf="@id/start_Guideline"
            app:layout_constraintTop_toBottomOf="@id/book_author_info_textView" />




    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>
