<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="238dp"
    android:layout_marginTop="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <androidx.cardview.widget.CardView
            android:id="@+id/book_container_cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cardBackgroundColor="@color/colorWhite"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            app:cardElevation="2dp"
            app:cardCornerRadius="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="166dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/bookName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:maxLines="2"
                    android:text="@string/data_structures_and_algorithms"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/book_authorName_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:maxLines="1"
                    android:text="@string/john_doe"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/bookName" />

                <Button
                    android:id="@+id/book_open_button"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/back_primary_solid"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/open"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/book_authorName_tv" />

                <RatingBar
                    android:id="@+id/book_ratingBar"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:rating="3"
                    android:visibility="visible"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/book_authorName_tv" />

                <TextView
                    android:id="@+id/book_free_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/back_primary_border"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/free"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/book_ratingBar" />

                <TextView
                    android:id="@+id/book_price_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/_14_00"
                    android:textSize="12sp"
                    android:visibility="visible"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/book_ratingBar" />

                <TextView
                    android:id="@+id/book_old_price_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/_14_00"
                    android:textSize="12sp"
                    android:visibility="visible"
                    app:layout_constraintStart_toEndOf="@id/book_price_textView"
                    app:layout_constraintTop_toBottomOf="@id/book_ratingBar" />

                <View
                    android:id="@+id/book_old_price_view"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/colorGray"
                    app:layout_constraintBottom_toBottomOf="@+id/book_old_price_textView"
                    app:layout_constraintEnd_toEndOf="@+id/book_old_price_textView"
                    app:layout_constraintStart_toStartOf="@+id/book_old_price_textView"
                    app:layout_constraintTop_toTopOf="@+id/book_old_price_textView" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/has_discount_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    app:constraint_referenced_ids="book_old_price_textView,book_old_price_view" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/book_container_card"
        android:layout_width="150dp"
        android:layout_height="230dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintStart_toStartOf="@id/book_container_cardView"
        app:layout_constraintBottom_toBottomOf="@id/book_container_cardView">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/book_imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_placeholder"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>